tests/syntax_error/number_underscore_prefix_hex.jou
def main() -> int:
    return 0x_cafe  # Error: invalid number or variable name "0x_cafe"
